--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -8,7 +8,7 @@
   @extend .btn--lg;
   border: 2px solid #ffffff;
   // TODO: Fix position depending on spacing
-  left: 70vw;
+  left: 80vw;
   background-image: url(/assets/tmp_chain.png);
   background-repeat:no-repeat;
 }
